Edycja pliku html,powiazanie z nr zgloszenia See: #2

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 <ul>
 <li> puy the mittens on the kittens</li>
 </ul>
+<li> buy a hat for the bat</li>
+<li> clearhe fogs for the frogs</li>
+<li>bring a box to the frog</li>
 </body>
 </html>
