add basic styl in index.html Resolve #3

--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<style>
+h1{
+text allign:center;
+}
+h3{text-transform:uppercase;
+}
+l1 {
+overflow:hidden;
+padding:20 px 0;
+border-buttom: 1px solid @eee;}
+</style>
 <!doctyoe html>
 <html>
 <head>
@@ -19,5 +30,10 @@
 <li> buy a hat for the bat</li>
 <li> clearhe fogs for the frogs</li>
 <li>bring a box to the frog</li>
+<h3> done</h3>
+<ul>
+<li> Put the mitters of the kitchens</li>
+</ui>
+
 </body>
 </html>
