--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ h3{text-transform:uppercase;
 }
 l1 {
 overflow:hidden;
-padding:20 px 0;
+padding:12 px 8 12px 40px;
+background: #eee ;
+font-size; 18px;
 border-buttom: 1px solid @eee;}
 </style>
 <!doctyoe html>
