--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ border-buttom: 1px solid @eee;}
 </ul>
 <li> buy a hat for the bat</li>
 <li> clearhe fogs for the frogs</li>
-<li>bring a box to the frog</li>
+<li>bring a box to the frog!</li>
 <h3> done</h3>
 <ul>
-<li> Put the mitters of the kitchens</li>
+<li> Put the mitters of the kitchens!</li>
 </ui>
 
 </body>
